--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-datetime": "2.16.3",
     "react-devicon": "^0.1.9",
     "react-dom": "16.13.1",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "5.1.2",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
